# schedule

./: .env  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
schedule/: admin.py  models.py  serializers.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_scheduledetail.py
